Pending changes exported from your codespace

--- a/labs/02-integrating-ai/01-AzureOpenAIAPI/azureopenaiapi.ipynb
+++ b/labs/02-integrating-ai/01-AzureOpenAIAPI/azureopenaiapi.ipynb
@@ -20,9 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found OpenAI API Base Endpoint: https://genaishowcase.openai.azure.com/\n",
+      "1ec7612a1d3a43caa3daccf7fb5c5559\n",
+      "2023-03-15-preview\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -36,8 +46,10 @@
     "    print(\"OpenAI API Base Endpoint not found. Have you configured the .env file?\")\n",
     "    \n",
     "API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
     "# This version of the API is needed to properly retrieve the list of model deployments.\n",
     "API_VERSION = \"2023-03-15-preview\"\n",
+    "print(API_VERSION)\n",
     "RESOURCE_ENDPOINT = os.getenv(\"OPENAI_API_BASE\")"
    ]
   },
@@ -51,9 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://genaishowcase.openai.azure.com//openai/deployments?api-version=2023-05-15\n"
+     ]
+    }
+   ],
    "source": [
     "url = RESOURCE_ENDPOINT + \"/openai/deployments?api-version=\" + API_VERSION\n",
     "\n",
@@ -80,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"error\":{\"code\":\"404\",\"message\": \"Resource not found\"}}\n"
+     ]
+    }
+   ],
    "source": [
+    "#this works only if you are going to use the AD, does NOT work with AzureAD\n",
     "r = requests.get(url, headers={\"api-key\": API_KEY})\n",
+    "\n",
+    "\n",
     "\n",
     "print(r.text)"
    ]
@@ -128,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://genaishowcase.openai.azure.com//openai/deployments/gpt-35-turbo/chat/completions?api-version=2023-05-15\n"
+     ]
+    }
+   ],
    "source": [
     "url = RESOURCE_ENDPOINT + \"/openai/deployments/\" + DEPLOYMENT_ID + \"/chat/completions?api-version=\" + API_VERSION\n",
     "\n",
@@ -168,9 +207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"id\": \"chatcmpl-8LAIXp72r8v59dDZiWmdqWU44S8nH\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"created\": 1700055165,\n",
+      "  \"model\": \"gpt-35-turbo\",\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"index\": 0,\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"message\": {\n",
+      "        \"role\": \"assistant\",\n",
+      "        \"content\": \"in a small village, there lived a young girl named Lily. She lived with her mother and father in a cozy cottage by the woods. Lily was a curious and adventurous girl who loved exploring the world around her.\\n\\nOne sunny morning, after finishing her chores, Lily decided to wander deeper into the woods than she had ever gone before. She followed a narrow path, amazed by the beauty of nature surrounding her. Birds chirped happily, and colorful butterflies danced in the air.\\n\\nAs Lily continued her journey, she came across a hidden clearing deep in the woods. In the middle of the clearing stood a majestic, ancient-looking tree with glowing pink leaves. She had never seen such a tree before and felt drawn to it.\\n\\nCuriosity getting the better of her, Lily approached the tree cautiously. She reached out to touch one of the glowing leaves, and as soon as her hand made contact, she felt a surge of energy coursing through her body. Suddenly, her whole world began to spin.\\n\\nWhen Lily regained her senses, she found herself in a magical kingdom filled with talking animals, fairies, and enchanted creatures. The sky was filled with vibrant colors, and everything seemed to sparkle. It was like stepping into a dream.\\n\\nAs she explored the kingdom, Lily came across a young deer named Oliver. Oliver was friendly and explained to Lily that the magical tree had transported her to this realm. He told her that the kingdom was ruled by an evil sorceress who had put a spell on the land, causing it to be trapped in eternal darkness.\\n\\nDetermined to help, Lily decided to embark on a quest to defeat the sorceress and restore light and happiness to the kingdom. Oliver became her loyal companion, guiding her through the dangerous forest and introducing her to other magical creatures who were also fighting against the sorceress.\\n\\nThrough their journey, Lily discovered her own hidden powers. She could communicate with animals, control plants, and had a unique ability to heal others. These abilities proved to be essential in their battle against the sorceress.\\n\\nAfter enduring countless challenges and facing various creatures under the sorceress's control, Lily and her friends finally confronted the evil sorceress in her enchanted castle. With courage, determination, and the power of friendship, they defeated her and lifted the spell from the kingdom.\\n\\nAs a sign of gratitude, the magical creatures crowned Lily as their queen. She ruled the kingdom with fairness and kindness, ensuring that the land remained a place of magic and harmony. The kingdom flourished under her rule, and Lily's adventures in the magical realm became legends told for generations.\\n\\nAnd so, Lily lived happily ever after, surrounded by the love and magic of the enchanted kingdom she had rescued. She cherished her memories from the woods and the extraordinary journey that had changed her life forever.\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"usage\": {\n",
+      "    \"prompt_tokens\": 12,\n",
+      "    \"completion_tokens\": 564,\n",
+      "    \"total_tokens\": 576\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "r = requests.post(url, headers={\"api-key\": API_KEY}, json={\"messages\":[{\"role\": \"assistant\", \"content\": \"Once upon a time \"}]})\n",
     "\n",
@@ -266,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
