--- a/labs/02-integrating-ai/02-OpenAIPackages/openai.ipynb
+++ b/labs/02-integrating-ai/02-OpenAIPackages/openai.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found OpenAI API Base Endpoint: https://genaishowcase.openai.azure.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +85,7 @@
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "openai.api_base = os.getenv(\"OPENAI_API_BASE\")\n",
     "# This version of the API is needed to properly retrieve the list of model deployments.\n",
-    "openai.api_version = \"2023-03-15-preview\""
+    "openai.api_version = \"2023-03-15-preview\"\n"
    ]
   },
   {
@@ -92,9 +100,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject list at 0x7f8e5882c290> JSON: {\n",
+       "  \"data\": [\n",
+       "    {\n",
+       "      \"scale_settings\": {\n",
+       "        \"scale_type\": \"standard\"\n",
+       "      },\n",
+       "      \"model\": \"gpt-4\",\n",
+       "      \"owner\": \"organization-owner\",\n",
+       "      \"id\": \"GPT-4\",\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"created_at\": 1691361034,\n",
+       "      \"updated_at\": 1698146894,\n",
+       "      \"object\": \"deployment\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"scale_settings\": {\n",
+       "        \"scale_type\": \"standard\"\n",
+       "      },\n",
+       "      \"model\": \"gpt-35-turbo-16k\",\n",
+       "      \"owner\": \"organization-owner\",\n",
+       "      \"id\": \"GPT-35\",\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"created_at\": 1698146875,\n",
+       "      \"updated_at\": 1698146875,\n",
+       "      \"object\": \"deployment\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"scale_settings\": {\n",
+       "        \"scale_type\": \"standard\"\n",
+       "      },\n",
+       "      \"model\": \"gpt-4-32k\",\n",
+       "      \"owner\": \"organization-owner\",\n",
+       "      \"id\": \"GPT-4-32k\",\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"created_at\": 1698839813,\n",
+       "      \"updated_at\": 1698839813,\n",
+       "      \"object\": \"deployment\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"scale_settings\": {\n",
+       "        \"scale_type\": \"standard\"\n",
+       "      },\n",
+       "      \"model\": \"gpt-35-turbo\",\n",
+       "      \"owner\": \"organization-owner\",\n",
+       "      \"id\": \"gpt-35-turbo\",\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"created_at\": 1700042024,\n",
+       "      \"updated_at\": 1700042024,\n",
+       "      \"object\": \"deployment\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"scale_settings\": {\n",
+       "        \"scale_type\": \"standard\"\n",
+       "      },\n",
+       "      \"model\": \"text-embedding-ada-002\",\n",
+       "      \"owner\": \"organization-owner\",\n",
+       "      \"id\": \"text-embedding-ada-002\",\n",
+       "      \"status\": \"succeeded\",\n",
+       "      \"created_at\": 1700042297,\n",
+       "      \"updated_at\": 1700042297,\n",
+       "      \"object\": \"deployment\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"object\": \"list\"\n",
+       "}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "openai.Deployment.list()"
    ]
@@ -115,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +218,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"id\": \"chatcmpl-8LAauyI9QLryUsqMMphX3mNsMQSWT\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"created\": 1700056304,\n",
+      "  \"model\": \"gpt-35-turbo\",\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"index\": 0,\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"message\": {\n",
+      "        \"role\": \"assistant\",\n",
+      "        \"content\": \"spending time with my loved ones.\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"usage\": {\n",
+      "    \"prompt_tokens\": 18,\n",
+      "    \"completion_tokens\": 8,\n",
+      "    \"total_tokens\": 26\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "r = openai.ChatCompletion.create(\n",
     "    model = COMPLETION_MODEL,\n",
@@ -160,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spending time with my loved ones.\n"
+     ]
+    }
+   ],
    "source": [
     "print(r.choices[0].message.content)"
    ]
@@ -217,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
