--- a/labs/02-integrating-ai/03-Langchain/langchain.ipynb
+++ b/labs/02-integrating-ai/03-Langchain/langchain.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found OpenAPI Base Endpoint: https://genaishowcase.openai.azure.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import openai\n",
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To determine the age of the President of the United States, you can follow these steps:\n",
+      "\n",
+      "1. Identify the current President: Find out who the current President of the United States is. As of September 2021, the President is Joe Biden.\n",
+      "\n",
+      "2. Determine the birthdate: Look up the birthdate of the President. Joe Biden was born on November 20, 1942.\n",
+      "\n",
+      "3. Calculate the current year: Determine the current year. Let's assume the current year is 2021.\n",
+      "\n",
+      "4. Subtract the birth year from the current year: Subtract the birth year of the President from the current year to find the age. In this case, subtract 1942 from 2021.\n",
+      "\n",
+      "   2021 - 1942 = 79\n",
+      "\n",
+      "5. Determine the President's age: The result of the subtraction will give you the age of the President. In this case, the President is 79 years old.\n",
+      "\n",
+      "So, as of September 2021, Joe Biden is 79 years old. Please note that this information may change over time as years pass and new Presidents are elected.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the prompt we want the AI to respond to - the message the Human user is asking\n",
     "msg = HumanMessage(content=\"Explain step by step. How old is the president of USA?\")\n",
@@ -119,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['input'] template='What interesting things can I make with a {input}?'\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a prompt template with variables, note the curly braces\n",
     "prompt = PromptTemplate(\n",
@@ -160,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +216,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are numerous interesting projects you can create with a Raspberry Pi! Here are a few examples:\n",
+      "\n",
+      "1. Retro gaming console: Build your own retro gaming console using RetroPie, a software package for Raspberry Pi that allows you to emulate classic game consoles.\n",
+      "\n",
+      "2. Home automation system: Control and monitor your home appliances, lights, and security using a Raspberry Pi with platforms like Home Assistant or OpenHAB.\n",
+      "\n",
+      "3. Media center: Transform your Raspberry Pi into a media center using Kodi, allowing you to stream movies, TV shows, music, and more to your TV.\n",
+      "\n",
+      "4. Weather station: Gather weather data using sensors connected to your Raspberry Pi and display it on a web interface or an LCD screen.\n",
+      "\n",
+      "5. Smart mirror: Create a smart mirror that displays weather updates, calendar events, news headlines, and more while functioning as a regular mirror.\n",
+      "\n",
+      "6. Security camera: Set up a DIY security camera system by connecting a camera module to your Raspberry Pi and using motion detection software like MotionEyeOS.\n",
+      "\n",
+      "7. Pi-powered robot: Build a small robot using a Raspberry Pi as the brain, allowing you to control its movements, interact with sensors, and perform various tasks.\n",
+      "\n",
+      "8. Network-wide ad-blocker: Set up a network-wide ad-blocker using a Raspberry Pi and Pi-hole software, blocking ads on all devices connected to your network.\n",
+      "\n",
+      "9. Voice assistant: Create your own voice-controlled assistant using a Raspberry Pi, a microphone, and software like Google Assistant, Alexa, or Mycroft.\n",
+      "\n",
+      "10. Portable gaming console: Build a handheld gaming console using Raspberry Pi Zero or Raspberry Pi Compute Module, allowing you to play retro games on the go.\n",
+      "\n",
+      "These are just a few examples, and there are countless other projects you can explore with a Raspberry Pi. The possibilities are limited only by your imagination and creativity!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the chain only specifying the input variable.\n",
     "response = chain.run({\"input\": \"raspberry pi\"})\n",
@@ -237,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
