--- a/labs/02-integrating-ai/04-SemanticKernel/semantickernel.ipynb
+++ b/labs/02-integrating-ai/04-SemanticKernel/semantickernel.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -30,7 +30,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>dotenv.net, 3.1.2</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#r \"nuget: dotenv.net, 3.1.2\"\n",
     "\n",
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -74,7 +84,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.SemanticKernel, 0.24.230918.1-preview</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#r \"nuget: Microsoft.SemanticKernel, 0.24.230918.1-preview\""
    ]
@@ -91,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -123,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -150,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -177,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -189,7 +209,37 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are countless interesting projects you can create with a Raspberry Pi! Here are a few ideas to get you started:\n",
+      "\n",
+      "1. Media center: Turn your Raspberry Pi into a media center by installing Kodi or Plex. You can stream movies, TV shows, and music to your TV or other devices.\n",
+      "\n",
+      "2. Retro gaming console: Build a retro gaming console using RetroPie. You can play classic games from various consoles, such as NES, SNES, Sega Genesis, and more.\n",
+      "\n",
+      "3. Home automation: Use your Raspberry Pi to control and automate various aspects of your home, such as lights, appliances, and security systems. You can use platforms like Home Assistant or OpenHAB.\n",
+      "\n",
+      "4. Weather station: Create a weather station that collects and displays weather data, such as temperature, humidity, and air pressure. You can even upload the data to a website for remote monitoring.\n",
+      "\n",
+      "5. Robotics: Build a robot using a Raspberry Pi as the brain. You can control motors, sensors, and other components to create a variety of robotic projects, from simple line-following robots to more complex autonomous vehicles.\n",
+      "\n",
+      "6. Network-wide ad-blocker: Set up a Raspberry Pi as a network-wide ad-blocker using Pi-hole. It blocks ads at the network level, so all devices connected to your network will benefit.\n",
+      "\n",
+      "7. Smart mirror: Create a smart mirror that displays useful information like the time, weather, calendar events, and news headlines. You can also integrate voice control for added convenience.\n",
+      "\n",
+      "8. Portable gaming console: Build a handheld gaming console using a Raspberry Pi, a small display, and some buttons. You can play retro games on the go.\n",
+      "\n",
+      "9. Home surveillance system: Set up a home surveillance system using a Raspberry Pi and a camera module. You can monitor your home remotely and receive alerts for any detected motion.\n",
+      "\n",
+      "10. Voice assistant: Create your own voice assistant using a Raspberry Pi and platforms like Google Assistant or Amazon Alexa. You can control smart devices, play music, answer questions, and more.\n",
+      "\n",
+      "These are just a few examples, and the possibilities are nearly endless. The Raspberry Pi community is very active, so you can find plenty of tutorials and project ideas online to suit your interests and skill level.\n"
+     ]
+    }
+   ],
    "source": [
     "var response = await whatCanIMakeFunction.InvokeAsync(\"raspberry pi\");\n",
     "\n",
@@ -210,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -224,8 +274,6 @@
    },
    "outputs": [],
    "source": [
-    "using Microsoft.SemanticKernel.Orchestration;\n",
-    "\n",
     "string summaryPrompt = \"Summarize the following text: {{$input}}\";\n",
     "var summaryFunction = kernel.CreateSemanticFunction(summaryPrompt);"
    ]
@@ -240,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -252,7 +300,15 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The text provides a list of interesting projects that can be created with a Raspberry Pi. Some of the ideas include turning it into a media center, retro gaming console, home automation system, weather station, robotics project, network-wide ad-blocker, smart mirror, portable gaming console, home surveillance system, and voice assistant. The Raspberry Pi community is active, providing tutorials and project ideas online for various interests and skill levels.\n"
+     ]
+    }
+   ],
    "source": [
     "var context = await kernel.RunAsync(\n",
     "    new ContextVariables(\"raspberry pi\"),\n",
@@ -283,8 +339,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
